fix: Increase nav-meut.active z-index.

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -66,14 +66,14 @@
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
-        z-index: 1;
+        z-index: 999;
+        height: 100%;
     }
 
     .nav-links {
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
+        align-items: center;
+        justify-content: center;
+        margin-top: 30px;
     }
 
 }
